@@ -1,3 +1,9 @@
+2005-01-10  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* elf64-sparc.c (sparc64_elf_adjust_dynamic_symbol): When linking a
+	non-shared object, do not reserve space in .plt and .rela.plt for
+	regular symbols neither defined nor referenced in shared objects.
+
 2004-05-17  Daniel Jacobowitz  <dan@debian.org>
 
 	* configure.in: Bump version to 2.15.  Mark as released.
